[gd_scene load_steps=10 format=2]

[ext_resource path="res://pieces/02.png" type="Texture" id=1]
[ext_resource path="res://pieces/10.png" type="Texture" id=2]
[ext_resource path="res://pieces/11.png" type="Texture" id=3]
[ext_resource path="res://pieces/12.png" type="Texture" id=4]
[ext_resource path="res://pieces/01.png" type="Texture" id=5]
[ext_resource path="res://pieces/21.png" type="Texture" id=6]
[ext_resource path="res://pieces/22.png" type="Texture" id=7]
[ext_resource path="res://Player/Pieces.gd" type="Script" id=8]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 330.1
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 9.71
linear_accel_random = 1.0
angle = 360.0
angle_random = 1.0

[node name="Pieces" type="Node2D"]
script = ExtResource( 8 )

[node name="piece1" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 3.0
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="piece2" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 3 )

[node name="piece3" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="piece4" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[node name="piece5" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="piece6" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 6 )

[node name="piece7" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 7 )

[node name="PiecesTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
